--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
 
-Iniobong Effiong <Iniobongeffiong40@gmail.com>
-Abdulkarim Ibrahim Aminu  <aminuabdulkarimibrahimu@gmail.com>
+SAIDI SAIDI <saidyahmady11@yahoo.com>
